# rust_source_codes

./: .gitignore  README.md
add/add-one/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
art/src/: lib.rs  main.rs
blog/: Cargo.toml
blog/blog1/src/: lib.rs  (+1 more)
branches/src/: main.rs
chain/src/: lib.rs
chain/tests/: some_test.rs
closures/src/: main.rs
collections/src/: main.rs
complex-num/src/: main.rs
concurrent_programming/: Cargo.toml
concurrent_programming/mutex_thread/: Cargo.toml
enumerations/src/: main.rs
fibonacci_sequence/src/: main.rs
function/src/: main.rs
generics_trait_lifttimes/: Cargo.toml
generics_trait_lifttimes/src/: main.rs
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
hello/src/: lib.rs  main.rs
iterator/src/: lib.rs  main.rs
lists/src/: first.rs  fourth.rs  lib.rs  second.rs
loops/src/: main.rs
match_option/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
my-first-tauri-app/src/: package-lock.json
my-first-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
owner/src/: main.rs
recover/: hello.txt
recover/src/: main.rs
rectangles/src/: main.rs
reference/src/: main.rs
restaurant/src/: lib.rs
slice/src/: main.rs
smart_pointers/: Cargo.toml
smart_pointers/p_box/: Cargo.toml
smart_pointers/p_rc/: Cargo.toml
structure/src/: main.rs
tempreture_exchange/: Cargo.toml
tempreture_exchange/src/: main.rs
testtest/src/: lib.rs  main.rs
unsafe_rust/src/: main.rs
variables/src/: main.rs
(+7 files in other folders)
